--- a/paper/cos424_homework_example.tex
+++ b/paper/cos424_homework_example.tex
@@ -39,11 +39,9 @@ This paper describes our submission to the Fragile Families Challenge \cite{ffc}
 \section{Introduction}
 \label{sec:intro}
 
-The Fragile Families and Child Wellbeing Study (FFCWS) \cite{ffcws} is an academic collaboration that followed around 5,000 urban families in the United States and collected information about how their social environments changed over time. The data collected in this study has been used by academic papers published in many journals since then \cite{ffc_publications}. Insights derived from this data are shared with policy makers through the Future of Children \cite{foc}, a collaboration between the Woodrow Wilson School of Public and International Affairs at Princeton University and the Brookings Institution.
+The Fragile Families and Child Wellbeing Study (FFCWS) \cite{ffcws} is an academic collaboration that followed around 5,000 urban families in the United States and collected information about how their social environments changed over time. The data collected in this study has been used by academic papers published in many journals since then \cite{ffc_publications}. Insights derived from this data are shared with policy makers through the Future of Children \cite{foc}, a collaboration between the Woodrow Wilson School of Public and International Affairs at Princeton University and the Brookings Institution. The Fragile Families Challenge is an open challenge for data scientists to apply machine learning and statistical methods to the data collected in the study.
 
-The Fragile Families Challenge is an open challenge for data scientists to apply machine learning and statistical methods to the data collected in this study. The challenge aims to use ensemble methods on the best models submitted to discover factors correlated with children beating the odds.
-
-In this paper, we discuss our solution to the Fragile Families Challenge. We modeled continuous labels and binary labels separately, using regression methods for the former and classification methods for the latter. The regression methods we evaluated are:
+In this paper, we discuss our submission to the Fragile Families Challenge. We modeled continuous labels and binary labels separately, using regression methods for the former and classification methods for the latter. The regression methods we evaluated are:
 
 \begin{enumerate}
 \item Linear Regression with Lasso Regularization (LRL)
