Paper: Add back missing citation (minor)

--- a/paper/cos424_homework_example.tex
+++ b/paper/cos424_homework_example.tex
@@ -293,6 +293,9 @@ Breiman, Leo. "Random forests." Machine learning 45.1 (2001): 5-32.
 
 \bibitem{scikitlearn}
 Pedregosa, Fabian, et al. "Scikit-learn: Machine learning in Python." Journal of Machine Learning Research 12.Oct (2011): 2825-2830.
+
+\bibitem{rffig}
+Elith, Jane, John R. Leathwick, and Trevor Hastie. "A working guide to boosted regression trees." Journal of Animal Ecology 77.4 (2008): 802-813.
  
 \end{thebibliography}
 
