--- a/paper/cos424_homework_example.tex
+++ b/paper/cos424_homework_example.tex
@@ -67,7 +67,7 @@ All source code is available on Github at \cite{myrepo}.
 \section{Dataset}
 \label{sec:dataset}
 
-The background dataset is primarily composed of answers to survey questions from the FFCWS. Each row uniquely identifies a child and each column is either an ID of some form or an answer to a survey question. In this dataset, there are 4242 rows and 12945 columns.
+The background dataset primarily consists of survey answers from the FFCWS. Each row uniquely identifies a child and each column is either an ID of some form or an answer to a survey question. In this dataset, there are 4242 rows and 12945 columns.
 
 The label data consists of six labels we wish to predict based on the features in the background data. These labels are derived from a final interview with the child when he or she is age 15. The six labels are: GPA, grit, material hardship, eviction, layoff and job training. The first three are continuous labels while the latter three are binary labels. There are 2121 rows in the label data, exactly half the number of rows in the background data. The goal is to predict the six labels for the 2121 missing rows using the background data.
 
